--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
                 </select>
                 <p>?</p>
             </span>
-            <button type="button" id="calculatebtn">Calculate!</button>
+            <button type="button" id="calculatebtn" class="ylwbtn">Calculate!</button>
 
             <span id = "answer">
                 
@@ -70,7 +70,7 @@
             <div id="6"></div>
         </section>
 
-        <button type="button" id="resetbtn" >Another!</button>
+        <button type="button" id="resetbtn" class="ylwbtn">Another!</button>
 
         </main>
 
